add owner visits
