# src/main/resources/openapi.yml
@@ -288,6 +288,55 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/RestError'
+  /owners/{ownerId}/visits:
+    get:
+      tags:
+        - visit
+      operationId: listOwnersVisits
+      summary: Get the visits history of the owner
+      description: Get the visits history of the owner.
+      parameters:
+        - name: ownerId
+          in: path
+          description: The ID of the pet owner.
+          required: true
+          schema:
+            type: integer
+            format: int32
+            minimum: 0
+            example: 1
+      responses:
+        200:
+          description: The owner's visits.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Visit'
+        400:
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        404:
+          description: Pet not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        500:
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
   /owners/{ownerId}/pets:
     get:
       tags:
